# pharmacy-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.json
apps/api/: __init__.py  config.py  database.py  logging_config.py  main.py  schemas.py  tracing.py
apps/api/agent/: __init__.py  graph.py  prompts.py  streaming.py
apps/api/tools/: __init__.py  exceptions.py  inventory.py  medication.py  prescription.py  schemas.py
apps/web/: app.js  index.html  style.css
docs/: EVAL_PLAN.md  FLOWS.md  HOME_ASSIGNMENT.md  PROJECT_SPEC.md  PROJECT_STATUS.md
scripts/: run_eval.py  seed_db.py
tests/: __init__.py  test_tracing.py
tests/test_tools/: __init__.py  conftest.py  test_inventory.py  test_medication.py  test_prescription.py
